ingress/service.yml

apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  ports:
  - port: 443
    name: https
    targetPort: 443
  - port: 80
    name: http
    targetPort: 80
  type: LoadBalancer
  selector:
    app: ingress-nginx
