ingress/grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.tevnan.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
