ingress/prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.tevnan.io
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
  - host: grafana.tevnan.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  - host: alertmanager.tevnan.io
    http:
      paths:
      - backend:
          serviceName: alertmanager
          servicePort: 9093
