ingress/test-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /prometheus
          backend:
            serviceName: prometheus-external
            servicePort: 30000
        - path: /grafana
          backend:
            serviceName: grafana
            servicePort: 30001
